[gd_scene load_steps=65 format=3 uid="uid://c67d6m6hytna4"]

[ext_resource type="Script" path="res://Scripts/Ogre3.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cab808piqkcd7" path="res://Assets/Ogre3/Dying/Dying_011.png" id="2"]
[ext_resource type="Texture2D" uid="uid://ooc3yvjjso2r" path="res://Assets/Ogre3/Dying/Dying_009.png" id="3"]
[ext_resource type="Texture2D" uid="uid://qtd3bbo607xw" path="res://Assets/Ogre3/Dying/Dying_000.png" id="4"]
[ext_resource type="Texture2D" uid="uid://cj2b8qk5s6dnm" path="res://Assets/Ogre3/Dying/Dying_010.png" id="5"]
[ext_resource type="Texture2D" uid="uid://qxw8gqu1yi3g" path="res://Assets/Ogre3/Dying/Dying_008.png" id="6"]
[ext_resource type="Texture2D" uid="uid://dq0r7vttm7iat" path="res://Assets/Ogre3/Dying/Dying_002.png" id="7"]
[ext_resource type="Texture2D" uid="uid://chamfkteenikb" path="res://Assets/Ogre3/Dying/Dying_003.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dflu80kvaxxjm" path="res://Assets/Ogre3/Dying/Dying_007.png" id="9"]
[ext_resource type="Texture2D" uid="uid://1v4el7a4j5ag" path="res://Assets/Ogre3/Hurt/Hurt_002.png" id="10"]
[ext_resource type="Texture2D" uid="uid://b2lvplc1wk8a0" path="res://Assets/Ogre3/Hurt/Hurt_004.png" id="11"]
[ext_resource type="Texture2D" uid="uid://bscj0eqplqpbt" path="res://Assets/Ogre3/Hurt/Hurt_005.png" id="12"]
[ext_resource type="Texture2D" uid="uid://dhcha0rijtduu" path="res://Assets/Ogre3/Walking/Walking_002.png" id="13"]
[ext_resource type="Texture2D" uid="uid://tg5eptolxek3" path="res://Assets/Ogre3/Walking/Walking_006.png" id="14"]
[ext_resource type="Texture2D" uid="uid://b6qs8jlunyq7w" path="res://Assets/Ogre3/Walking/Walking_000.png" id="15"]
[ext_resource type="Texture2D" uid="uid://ctgnsbrytpft3" path="res://Assets/Ogre3/Walking/Walking_014.png" id="16"]
[ext_resource type="Texture2D" uid="uid://cixy2olv6jogk" path="res://Assets/Ogre3/Walking/Walking_004.png" id="17"]
[ext_resource type="Texture2D" uid="uid://rnjhfmo3swpp" path="res://Assets/Ogre3/Walking/Walking_005.png" id="18"]
[ext_resource type="Texture2D" uid="uid://dec7gissp8vjb" path="res://Assets/Ogre3/Walking/Walking_003.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cqbbqgwxfs06b" path="res://Assets/Ogre3/Walking/Walking_013.png" id="20"]
[ext_resource type="Texture2D" uid="uid://dw1fahx7wi7vs" path="res://Assets/Ogre3/Walking/Walking_009.png" id="21"]
[ext_resource type="Texture2D" uid="uid://oubeymix12ix" path="res://Assets/Ogre3/Walking/Walking_008.png" id="22"]
[ext_resource type="Texture2D" uid="uid://c6thd6cjtt2ep" path="res://Assets/Ogre3/Walking/Walking_016.png" id="23"]
[ext_resource type="Texture2D" uid="uid://cvxdxejj2jpy5" path="res://Assets/Ogre3/Walking/Walking_015.png" id="24"]
[ext_resource type="Texture2D" uid="uid://s7tmut51vpfh" path="res://Assets/Ogre3/Walking/Walking_012.png" id="25"]
[ext_resource type="Texture2D" uid="uid://bk48mi85f6ic0" path="res://Assets/Ogre3/Walking/Walking_010.png" id="26"]
[ext_resource type="Texture2D" uid="uid://cixspkfwjr6us" path="res://Assets/Ogre3/Walking/Walking_011.png" id="27"]
[ext_resource type="Texture2D" uid="uid://1pyxc3y4ytmg" path="res://Assets/Ogre3/Dying/Dying_014.png" id="28"]
[ext_resource type="Texture2D" uid="uid://ikuyxh5cmt33" path="res://Assets/Ogre3/Dying/Dying_013.png" id="29"]
[ext_resource type="Texture2D" uid="uid://bt51ev7d1soew" path="res://Assets/Ogre3/Hurt/Hurt_011.png" id="30"]
[ext_resource type="Texture2D" uid="uid://d0v05ai3mo1wh" path="res://Assets/Ogre3/Hurt/Hurt_009.png" id="31"]
[ext_resource type="AudioStream" uid="uid://ba8gu4c4h6vs8" path="res://Assets/Sound/Hit.mp3" id="32"]
[ext_resource type="Texture2D" uid="uid://l5df3c2ry6t" path="res://Assets/Ogre3/Hurt/Hurt_010.png" id="33"]
[ext_resource type="Texture2D" uid="uid://c8d7ct6vwrh54" path="res://Assets/Ogre3/Hurt/Hurt_006.png" id="34"]
[ext_resource type="Texture2D" uid="uid://h45npuc5koeh" path="res://Assets/Ogre3/Hurt/Hurt_007.png" id="35"]
[ext_resource type="Texture2D" uid="uid://vu2m0fqf8l28" path="res://Assets/Ogre3/Dying/Dying_005.png" id="36"]
[ext_resource type="Texture2D" uid="uid://hj0jwpeg1a2x" path="res://Assets/Ogre3/Dying/Dying_006.png" id="37"]
[ext_resource type="Texture2D" uid="uid://c6mrmib4pdop6" path="res://Assets/Ogre3/Dying/Dying_004.png" id="38"]
[ext_resource type="Texture2D" uid="uid://ca66awqcpktci" path="res://Assets/Ogre3/Hurt/Hurt_003.png" id="39"]
[ext_resource type="Texture2D" uid="uid://ct08gwlepixmv" path="res://Assets/Ogre3/Walking/Walking_001.png" id="40"]
[ext_resource type="Texture2D" uid="uid://d1v8y2i8uhga1" path="res://Assets/Ogre3/Hurt/Hurt_000.png" id="41"]
[ext_resource type="Texture2D" uid="uid://cqjflwg8rf58u" path="res://Assets/Ogre3/Hurt/Hurt_001.png" id="42"]
[ext_resource type="Texture2D" uid="uid://1lw68scwbs3x" path="res://Assets/Ogre3/Dying/Dying_001.png" id="43"]
[ext_resource type="Texture2D" uid="uid://hc4r26kiijhq" path="res://Assets/Ogre3/Hurt/Hurt_008.png" id="44"]
[ext_resource type="Texture2D" uid="uid://b8pyjbghpsn84" path="res://Assets/Ogre3/Dying/Dying_012.png" id="45"]
[ext_resource type="Texture2D" uid="uid://bajrt5btypkg6" path="res://Assets/Ogre3/Walking/Walking_017.png" id="46"]
[ext_resource type="Texture2D" uid="uid://crucydtusjv5p" path="res://Assets/Ogre3/Walking/Walking_007.png" id="47"]
[ext_resource type="Texture2D" uid="uid://c1qocx3e02igv" path="res://Assets/Ogre3/Attacking/Attacking_001.png" id="48"]
[ext_resource type="Texture2D" uid="uid://bye4aq0480ho4" path="res://Assets/Ogre3/Attacking/Attacking_000.png" id="49"]
[ext_resource type="Texture2D" uid="uid://xvwx1qvcu8lj" path="res://Assets/Ogre3/Attacking/Attacking_002.png" id="50"]
[ext_resource type="Texture2D" uid="uid://d17dfkrjubxx2" path="res://Assets/Ogre3/Attacking/Attacking_003.png" id="51"]
[ext_resource type="Texture2D" uid="uid://cful7d1jpxal0" path="res://Assets/Ogre3/Attacking/Attacking_008.png" id="52"]
[ext_resource type="Texture2D" uid="uid://l0fdjg1ghixe" path="res://Assets/Ogre3/Attacking/Attacking_009.png" id="53"]
[ext_resource type="Texture2D" uid="uid://cv18oyt7crhvt" path="res://Assets/Ogre3/Attacking/Attacking_010.png" id="54"]
[ext_resource type="Texture2D" uid="uid://b3x6ogodd3shy" path="res://Assets/Ogre3/Attacking/Attacking_011.png" id="55"]
[ext_resource type="Texture2D" uid="uid://brn1o772w0bf0" path="res://Assets/Ogre3/Attacking/Attacking_004.png" id="56"]
[ext_resource type="Texture2D" uid="uid://dl7sgo50j0acs" path="res://Assets/Ogre3/Attacking/Attacking_005.png" id="57"]
[ext_resource type="Texture2D" uid="uid://cai1mqno3tsua" path="res://Assets/Ogre3/Attacking/Attacking_006.png" id="58"]
[ext_resource type="Texture2D" uid="uid://vntxrp4gvm78" path="res://Assets/Ogre3/Attacking/Attacking_007.png" id="59"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("49")
}, {
"duration": 1.0,
"texture": ExtResource("48")
}, {
"duration": 1.0,
"texture": ExtResource("50")
}, {
"duration": 1.0,
"texture": ExtResource("51")
}, {
"duration": 1.0,
"texture": ExtResource("56")
}, {
"duration": 1.0,
"texture": ExtResource("57")
}, {
"duration": 1.0,
"texture": ExtResource("58")
}, {
"duration": 1.0,
"texture": ExtResource("59")
}, {
"duration": 1.0,
"texture": ExtResource("52")
}, {
"duration": 1.0,
"texture": ExtResource("53")
}, {
"duration": 1.0,
"texture": ExtResource("54")
}, {
"duration": 1.0,
"texture": ExtResource("55")
}],
"loop": true,
"name": &"attacking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("43")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("38")
}, {
"duration": 1.0,
"texture": ExtResource("36")
}, {
"duration": 1.0,
"texture": ExtResource("37")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}, {
"duration": 1.0,
"texture": ExtResource("45")
}, {
"duration": 1.0,
"texture": ExtResource("29")
}, {
"duration": 1.0,
"texture": ExtResource("28")
}],
"loop": true,
"name": &"dying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("41")
}, {
"duration": 1.0,
"texture": ExtResource("42")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("39")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("34")
}, {
"duration": 1.0,
"texture": ExtResource("35")
}, {
"duration": 1.0,
"texture": ExtResource("44")
}, {
"duration": 1.0,
"texture": ExtResource("31")
}, {
"duration": 1.0,
"texture": ExtResource("33")
}, {
"duration": 1.0,
"texture": ExtResource("30")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("40")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("47")
}, {
"duration": 1.0,
"texture": ExtResource("22")
}, {
"duration": 1.0,
"texture": ExtResource("21")
}, {
"duration": 1.0,
"texture": ExtResource("26")
}, {
"duration": 1.0,
"texture": ExtResource("27")
}, {
"duration": 1.0,
"texture": ExtResource("25")
}, {
"duration": 1.0,
"texture": ExtResource("20")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("24")
}, {
"duration": 1.0,
"texture": ExtResource("23")
}, {
"duration": 1.0,
"texture": ExtResource("46")
}],
"loop": true,
"name": &"walking",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(140.5, 184)

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(91, 21.125)

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(254, 161)

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(448, 85)

[node name="Ogre3" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 163
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, 0)
sprite_frames = SubResource("1")
animation = &"walking"
frame = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-15.5, 66)
shape = SubResource("4")

[node name="FloorChecker" type="RayCast2D" parent="."]
target_position = Vector2(0, 350)
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(10, -142.875)
shape = SubResource("3")

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2(2, 41)
shape = SubResource("5")

[node name="DetectArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2(0, 75)
shape = SubResource("6")

[node name="HitTimer" type="Timer" parent="."]
one_shot = true

[node name="DieTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("32")
